<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            style="@style/edit_text_design"
            android:autofillHints="name"
            android:hint="@string/enter_dog_name"
            android:inputType="text"
            android:id="@+id/name_et_input"/>

        <EditText
            style="@style/edit_text_design"
            android:autofillHints="number"
            android:hint="@string/enter_dog_age"
            android:inputType="number"
            android:id="@+id/age_et_input"/>

        <EditText
            style="@style/edit_text_design"
            android:autofillHints="name"
            android:hint="@string/enter_dog_color"
            android:inputType="text"
            android:id="@+id/color_et_input"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:contentDescription="@null"
            android:id="@+id/pic_dog"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/take_picture"
            android:id="@+id/pic_btn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_dog"
            android:textAllCaps="false"
            android:id="@+id/add_btn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_dogs"
            android:textAllCaps="false"
            android:id="@+id/show_btn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/dogs_layout"/>
    </LinearLayout>
</ScrollView>
